@@ -1,13 +1,13 @@
 {
-  "timestamp" : "2022-07-19T01:45:54Z",
+  "timestamp" : "2022-07-19T08:19:08Z",
   "count_outdated" : 399,
   "uniques_outdated" : 230,
-  "count" : 426,
+  "count" : 425,
   "uniques" : 245,
   "clones" : [
     {
       "timestamp": "2022-07-05T00:00:00Z",
-      "count": 2,
+      "count": 1,
       "count_minmax": [ 1, 2 ],
       "uniques": 1,
       "uniques_minmax": [ 1, 1 ]
