@@ -1,3 +1,10 @@
+2022-07-19T08:19:08Z:
+* notice: last 14d: unq all: 4 26
+* notice: prev accum: outdated-unq outdated-all / unq all: 230 399 / 245 426
+* notice: next accum: outdated-unq outdated-all / unq all: 230 399 / 245 425
+* notice: prev exec diff / last date diff / accum: unq all: +0 +0 -0 -1 / +1 +2 -0 -1 / 1 1
+* notice: removed / changed dates: [] / [2022-07-05]
+
 2022-07-19T01:45:54Z:
 * notice: last 14d: unq all: 4 27
 * notice: prev accum: outdated-unq outdated-all / unq all: 229 397 / 245 425
